--- a/public/index.html
+++ b/public/index.html
@@ -510,7 +510,7 @@
               })(v[w]);
             y = e.createElement(n);
             y.async = !0;
-            y.src = 'https://cdn.pendo.io/agent/static/' + apiKey + '/pendo.js';
+            y.src = 'https://cdn.pendo.io/agent/static/b2f6db4b-aa15-45b4-75af-d5b17e4c8578/pendo.js';
             z = e.getElementsByTagName(n)[0];
             z.parentNode.insertBefore(y, z);
           })(window, document, 'script', 'pendo');
